# simsalabim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
notebooks/: Report.html  Report.ipynb  augmented_dataset_generation.ipynb  data_exploration.ipynb
scripts/: augmented_dataset_generation.py  augmented_dataset_generation_kfold.py  check_dataset.py  compute_metrics.py  inference.py  train.py  train_command.sh  train_command_aug_nopretrain.sh  train_command_aug_pretrain.sh  train_command_noaug_nopretrain.sh  train_command_noaug_pretrain.sh  train_wav.py
src/: audio.py  data.py  data_augmentation.py  focal_loss.py  models.py  utils.py  wav_dataset.py
