[tool.poetry]
name = "simsalabim"
version = "0.1.0"
description = ""
authors = ["Matteo Barbieri <neopard@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
librosa = "^0.10.0.post2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
lightning = "^2.0.4"
tqdm = "^4.65.0"
torch = "^1.13"
torchvision = "0.14.1"
tensorboard = "^2.13.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.99.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
